# InlineFunctionHooking

./: CMakeLists.txt  Configure.bat  README.md
HookEngine/: CMakeLists.txt  HookEngine.cpp  HookEngine.h  HookEngine.inl
HookTest/: CMakeLists.txt  HookTest.cpp
Udis86/: CMakeLists.txt
Udis86/libudis86/: itab.c  itab.h
